@@ -90,6 +90,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5905: time.strftime() is now using the locale encoding, instead of
+  UTF-8, if the wcsftime() function is not available.
+
 - Issue #8641: Update IDLE 3 syntax coloring to recognize b".." and not u"..".
   Patch by Tal Einat.
 
